# mobidict

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.ps1  build.sh  completer.cpp  completer.h  htmlbrowser.cpp  htmlbrowser.h  libmobi.patch  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mobidict.cpp  mobidict.h  mobidict.rc  resources.qrc  settings.cpp  settings.h  settings.ui  update-enc-length.patch
cmake/: MacOSXBundleInfo.plist.in
res/: app.icns  mobidict.desktop
